@@ -21,6 +21,10 @@ class CPyCOMTest : public IDispatchImpl<IPyCOMTest, &IID_IPyCOMTest, &LIBID_PyCO
     {
         memset(m_rsArray, 0, nMaxSessions * sizeof(PyCOMTestSessionData));
         m_cy.int64 = 0;
+        m_dec.sign = 0;
+        m_dec.scale = 0;
+        m_dec.Hi32 = 0;
+        m_dec.Lo64 = 0;
         m_long = 0;
     }
     ~CPyCOMTest();
@@ -91,6 +95,9 @@ class CPyCOMTest : public IDispatchImpl<IPyCOMTest, &IID_IPyCOMTest, &LIBID_PyCO
     STDMETHOD(DoubleCurrency)(CY, CY *);
     STDMETHOD(DoubleCurrencyByVal)(CY *);
     STDMETHOD(AddCurrencies)(CY v1, CY v2, CY *);
+    STDMETHOD(DoubleDecimal)(DECIMAL, DECIMAL *);
+    STDMETHOD(DoubleDecimalByVal)(DECIMAL *);
+    STDMETHOD(AddDecimals)(DECIMAL v1, DECIMAL v2, DECIMAL *);
 
     // method to broadcast a call on the current connections
     STDMETHOD(Fire)(long nID);
@@ -114,6 +121,8 @@ class CPyCOMTest : public IDispatchImpl<IPyCOMTest, &IID_IPyCOMTest, &LIBID_PyCO
     STDMETHOD(put_IntProp)(int val);
     STDMETHOD(get_CurrencyProp)(CY *ret);
     STDMETHOD(put_CurrencyProp)(CY val);
+    STDMETHOD(get_DecimalProp)(DECIMAL *ret);
+    STDMETHOD(put_DecimalProp)(DECIMAL val);
     STDMETHOD(get_ParamProp)(int which, int *ret2);
     STDMETHOD(put_ParamProp)(int which, int val);
 
@@ -140,6 +149,7 @@ class CPyCOMTest : public IDispatchImpl<IPyCOMTest, &IID_IPyCOMTest, &LIBID_PyCO
     long m_long;
     unsigned long m_ulong;
     CY m_cy;
+    DECIMAL m_dec;
     int m_paramprop1, m_paramprop2;
 };
 
